--- a/styles.css
+++ b/styles.css
@@ -45,10 +45,12 @@ padding-left: 40px;
 padding-top: 40px;
 padding-right: 40px;
 box-sizing: border-box;
-width: 300px;
+width: 350px;
 }
 
 /* Contacts */
+
+
 
 .contacs-title{
     color: #161D2A;
@@ -73,6 +75,7 @@ font-size: 14px;
 font-weight: 400;
 line-height: 24px;
 text-decoration-line: underline;
+margin-left: 10px;
 }
 
 .contacts-item{
